[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/default_sprites/Test_Block.png" type="Texture" id=1]
[ext_resource path="res://scripts/Homebase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 133, 66 )

[node name="Homebase" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 4 )
texture = ExtResource( 1 )

[node name="Area_Outer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Outer"]
shape = SubResource( 1 )

[node name="Area_Hangar" type="Area2D" parent="."]
position = Vector2( -266, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Hangar"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area_Outer" to="." method="_on_Area_Outer_body_entered"]
[connection signal="body_entered" from="Area_Hangar" to="." method="_on_Area_Hangar_body_entered"]
